02_docker-for-enterprise-operations/exercise-9/deployment-jumper.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: jumper-deployment
  namespace: frontend
  labels:
    app: jumper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jumper
  template:
    metadata:
      labels:
        app: jumper
    spec:
      containers:
      - name: jumper
        image: nginx:alpine
