02_docker-for-enterprise-operations/exercise-9/deployment-web.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: web-deployment
  namespace: frontend
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: training/whoami:latest
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: frontend
spec:
  selector:
    app: web
  ports:
  - port: 3000
    targetPort: 8000
