02_docker-for-enterprise-operations/exercise-9/deployment-worker.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: worker-deployment
  namespace: backend
  labels:
    app: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: training/whoami:latest
        ports:
        - containerPort: 8000

---
apiVersion: v1
kind: Service
metadata:
  name: worker
  namespace: backend
spec:
  selector:
    app: worker
  ports:
  - port: 3100
    targetPort: 8000
