02_docker-for-enterprise-operations/exercise-9/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: frontend
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - port: 3000
    targetPort: 8000
