02_docker-for-enterprise-operations/exercise-9/ingress-backend.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: backend
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /worker
        backend:
          serviceName: worker
          servicePort: 3100
