02_docker-for-enterprise-operations/exercise-9/ingress-frontend.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: frontend
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /web
        backend:
          serviceName: web
          servicePort: 3000
